Cambio en rutting

--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,13 +1,13 @@
 <footer class="footer">
   <div class="footer-first-line">
     <div class="footer-logo">
-      <a href="#"><img src="/assets/footer/logo_imagen.png" alt="Logo Imagen" /></a>
-      <a href="#"><img src="/assets/footer/logo_texto.png" alt="Logo Texto" /></a>
+      <a href="#"><img src="/assets/img/logo_imagen.png" alt="Logo Imagen" /></a>
+      <a href="#"><img src="/assets/img/logo_texto.png" alt="Logo Texto" /></a>
     </div>
     <div class="footer-contact">
-      <p><img src="/assets/footer/geo_logo.png" alt="Geo Logo" />Dirección: C/ Albarracín 25, 28037, Madrid, España</p>
-      <p><img src="/assets/footer/correo_logo.png" alt="Correo Logo" />Email: <a href="mailto:karhub@gmail.com">karhub&#64gmail.com</a></p>
-      <p><img src="/assets/footer/telefono_logo.png" alt="Teléfono Logo" />Teléfono: <a href="tel:+34923456789">+34 923456789</a></p>
+      <p><img src="/assets/img/geo_logo.png" alt="Geo Logo" />Dirección: C/ Albarracín 25, 28037, Madrid, España</p>
+      <p><img src="/assets/img/correo_logo.png" alt="Correo Logo" />Email: <a href="mailto:karhub@gmail.com">karhub&#64;gmail.com</a></p>
+      <p><img src="/assets/img/telefono_logo.png" alt="Teléfono Logo" />Teléfono: <a href="tel:+34923456789">+34 923456789</a></p>
     </div>
   </div>
 
@@ -15,10 +15,10 @@
     <div class="footer-left">
       <h3>Haz clic, conéctate y acompáñanos en cada paso.</h3>
       <div class="footer-social">
-        <a href="#"><img src="/assets/footer/facebook_logo.png" alt="Facebook" /></a>
-        <a href="#"><img src="/assets/footer/instagram_logo.png" alt="Instagram" /></a>
-        <a href="#"><img src="/assets/footer/twitter_logo.png" alt="Twitter" /></a>
-        <a href="#"><img src="/assets/footer/youtube_logo.png" alt="YouTube" /></a>
+        <a href="#"><img src="/assets/img/facebook_logo.png" alt="Facebook" /></a>
+        <a href="#"><img src="/assets/img/instagram_logo.png" alt="Instagram" /></a>
+        <a href="#"><img src="/assets/img/twitter_logo.png" alt="Twitter" /></a>
+        <a href="#"><img src="/assets/img/youtube_logo.png" alt="YouTube" /></a>
       </div>
     </div>
 
