--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <app-navbar></app-navbar>
 <router-outlet ></router-outlet>
+<app-dato-home></app-dato-home>
+<app-hechos-home></app-hechos-home>
 <app-footer></app-footer>
