--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,5 @@
 <router-outlet ></router-outlet>
 
 <app-info-block1></app-info-block1>
+<app-preview-catalogo></app-preview-catalogo>
 <app-footer></app-footer>
