--- a/src/app/shared/components/preview-catalogo/preview-catalogo.component.html
+++ b/src/app/shared/components/preview-catalogo/preview-catalogo.component.html
@@ -8,7 +8,7 @@
             <!-- Motocicletas -->
             <div class="tarjeta-vehiculo">
                 <div class="imagen-vehiculo">
-                    <img src="imagenes/honda-cb500f.jpeg" alt="Honda CB500F">
+                    <img src="assets/img/catalogo/honda-cb500f.jpeg" alt="Honda CB500F">
                 </div>
                 <div class="info-vehiculo">
                     <div class="nombre-precio-vehiculo">
@@ -42,7 +42,7 @@
 
             <div class="tarjeta-vehiculo">
                 <div class="imagen-vehiculo">
-                    <img src="imagenes/2.jpg" alt="Yamaha NMAX 155">
+                    <img src="assets/img/catalogo/2.jpg" alt="Yamaha NMAX 155">
                 </div>
                 <div class="info-vehiculo">
                     <div class="nombre-precio-vehiculo">
@@ -76,7 +76,7 @@
 
             <div class="tarjeta-vehiculo">
                 <div class="imagen-vehiculo">
-                    <img src="imagenes/3.webp" alt="BMW R 1250 GS">
+                    <img src="assets/img/catalogo/3.webp" alt="BMW R 1250 GS">
                 </div>
                 <div class="info-vehiculo">
                     <div class="nombre-precio-vehiculo">
@@ -111,7 +111,7 @@
             <!-- Coches -->
             <div class="tarjeta-vehiculo">
                 <div class="imagen-vehiculo">
-                    <img src="imagenes/4.jpg" alt="Volkswagen Transporter Kombi">
+                    <img src="assets/img/catalogo/4.jpg" alt="Volkswagen Transporter Kombi">
                 </div>
                 <div class="info-vehiculo">
                     <div class="nombre-precio-vehiculo">
@@ -145,7 +145,7 @@
 
             <div class="tarjeta-vehiculo">
                 <div class="imagen-vehiculo">
-                    <img src="imagenes/5.jpg" alt="Toyota Sedan">
+                    <img src="assets/img/catalogo/5.jpg" alt="Toyota Sedan">
                 </div>
                 <div class="info-vehiculo">
                     <div class="nombre-precio-vehiculo">
@@ -179,7 +179,7 @@
 
             <div class="tarjeta-vehiculo">
                 <div class="imagen-vehiculo">
-                    <img src="imagenes/6.jpeg" alt="Porsche SUV">
+                    <img src="assets/img/catalogo/6.jpeg" alt="Porsche SUV">
                 </div>
                 <div class="info-vehiculo">
                     <div class="nombre-precio-vehiculo">
@@ -214,7 +214,7 @@
             <!-- Furgonetas -->
             <div class="tarjeta-vehiculo">
                 <div class="imagen-vehiculo">
-                    <img src="imagenes/7.jpg" alt="Volkswagen Transporter Kombi">
+                    <img src="assets/img/catalogo/7.jpg" alt="Volkswagen Transporter Kombi">
                 </div>
                 <div class="info-vehiculo">
                     <div class="nombre-precio-vehiculo">
@@ -248,7 +248,7 @@
 
             <div class="tarjeta-vehiculo">
                 <div class="imagen-vehiculo">
-                    <img src="imagenes/8.jpg" alt="Mercedes-Benz Sprinter">
+                    <img src="assets/img/catalogo/8.jpg" alt="Mercedes-Benz Sprinter">
                 </div>
                 <div class="info-vehiculo">
                     <div class="nombre-precio-vehiculo">
@@ -282,7 +282,7 @@
 
             <div class="tarjeta-vehiculo">
                 <div class="imagen-vehiculo">
-                    <img src="imagenes/9.jpg" alt="Ford EcoBoost">
+                    <img src="assets/img/catalogo/9.jpg" alt="Ford EcoBoost">
                 </div>
                 <div class="info-vehiculo">
                     <div class="nombre-precio-vehiculo">
