--- a/src/app/shared/components/dato-home/dato-home.component.html
+++ b/src/app/shared/components/dato-home/dato-home.component.html
@@ -11,7 +11,7 @@
       <div class="col-md-6">
         <ul class="list-unstyled">
           <li class="mb-4">
-            <h5><span class="step-number">1</span> Selección de vehículo</h5>
+            <h5><span class="step-number">1</span> Selcción de vehículo</h5><!--cambio seleccion corregir-->
             <p>Elige el modelo y las características que mejor se adapten a tu viaje: tamaño, extras y tipo.</p>
           </li>
           <li class="mb-4">
