--- a/src/app/shared/components/hechos-home/hechos-home.component.html
+++ b/src/app/shared/components/hechos-home/hechos-home.component.html
@@ -89,7 +89,7 @@
                 <img class="img-fondo llanta2" src="assets/img/llanta.png">
                 <div class="card-body">
                     
-                    <h2 class="titulo">Disfruta de cada kilómetro</h2>
+                    <h2 class="titulo">Disfruta de cada kilómtro</h2><!--cambio corregir-->
                     <p class="descripcion">Convierte cada viaje en un momento memorable 
                         gracias a nuestros vehículos equipados para tu confort. Disfruta del 
                         silencio en la cabina, el rendimiento óptimo en carretera y la confianza 
