--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<app-navbar></app-navbar>
+<!-- <app-navbar></app-navbar> -->
 <router-outlet ></router-outlet>
 
-<app-info-block1></app-info-block1>
+<!-- <app-info-block1></app-info-block1>
 <app-preview-catalogo></app-preview-catalogo>
-<app-footer></app-footer>
+<app-footer></app-footer> -->
