--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -49,5 +49,6 @@
 
   <div class="footer-copyright">
     <p>© Copyright KARHUB 2025 | Todos los derechos reservados.</p>
+    <p>hola hola hola</p>
   </div>
 </footer>
