--- a/src/app/shared/components/login/login.component.html
+++ b/src/app/shared/components/login/login.component.html
@@ -1,1 +1,11 @@
-<p>login works!</p>
+<div class="modal-login-bg">
+  <div class="modal-login">
+    <h2>Iniciar Sesion</h2>
+    <form>
+      <input type="email" placeholder="Email" class="login-input" />
+      <input type="password" placeholder="Contraseña" class="login-input" />
+      <button type="submit" class="login-btn">Iniciar Sesion</button>
+    </form>
+    <button class="close-btn" type="button" (click)="close()">&times;</button>
+  </div>
+</div>
