--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -19,8 +19,8 @@
         <li class="nav-item"><a class="nav-link" href="/#">Contacto</a></li>
       </ul>
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link" href="/#">Iniciar sesión</a></li>
-        <li class="nav-item"><a class="nav-link" href="/#">Registro</a></li>
+        <li class="nav-item"><a class="nav-link" href="#" (click)="abrirLogin()">Iniciar sesión</a></li>
+        <li class="nav-item"><a class="nav-link" href="#" (click)="abrirRegistro()">Registro</a></li>
       </ul>
     </div>
   </div>
