--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -19,9 +19,12 @@
         <li class="nav-item"><a class="nav-link" href="/#">Contacto</a></li>
       </ul>
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link" href="#" (click)="abrirLogin()">Iniciar sesión</a></li>
-        <li class="nav-item"><a class="nav-link" href="#" (click)="abrirRegistro()">Registro</a></li>
+        <li class="nav-item"><a class="nav-link" href="#" (click)="abrirLogin(); $event.preventDefault()">Iniciar sesión</a></li>
+        <li class="nav-item"><a class="nav-link" href="#" (click)="abrirRegistro(); $event.preventDefault()">Registro</a></li>
       </ul>
     </div>
   </div>
 </nav>
+
+<app-login *ngIf="showLoginModal" (closeModal)="cerrarLogin()"></app-login>
+<app-registrarse *ngIf="showRegisterModal" (closeModal)="cerrarRegistro()"></app-registrarse>
