--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -14,7 +14,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item"><a class="nav-link" href="/#">Alquilar</a></li>
-        <li class="nav-item"><a class="nav-link" href="/#">Catálogo</a></li>
+        <li class="nav-item"><a class="nav-link" routerLink="/catalogo">Catálogo</a></li>
         <li class="nav-item"><a class="nav-link" href="/#">Nosotros</a></li>
         <li class="nav-item"><a class="nav-link" href="/#">Contacto</a></li>
       </ul>
