--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,24 +1,48 @@
 <footer class="footer">
+  <!-- Primera línea: Logo + Contacto -->
   <div class="footer-first-line">
     <div class="footer-logo">
-      <a href="#"><img src="/assets/img/logo_imagen.png" alt="Logo Imagen" /></a>
-      <a href="#"><img src="/assets/img/logo_texto.png" alt="Logo Texto" /></a>
+      <a href="#"><img class="img-logo" src="/assets/img/logo_imagen.png" alt="Logo Imagen" /></a>
+      <a href="#"><img class="img-texto" src="/assets/img/logo_texto.png" alt="Logo Texto" /></a>
     </div>
+
     <div class="footer-contact">
-      <p><img src="/assets/img/geo_logo.png" alt="Geo Logo" />Dirección: C/ Albarracín 25, 28037, Madrid, España</p>
-      <p><img src="/assets/img/correo_logo.png" alt="Correo Logo" />Email: <a href="mailto:karhub@gmail.com">karhub&#64;gmail.com</a></p>
-      <p><img src="/assets/img/telefono_logo.png" alt="Teléfono Logo" />Teléfono: <a href="tel:+34923456789">+34 923456789</a></p>
+      <div class="footer-contact-item">
+        <img src="/assets/img/geo_logo.png" alt="Geo Logo" />
+        <div>
+          <span>Dirección:</span><br />
+          <span>C/ Albarracín 25</span><br />
+          <span>28037, Madrid, España</span>
+        </div>
+      </div>
+
+      <div class="footer-contact-item">
+        <img src="/assets/img/correo_logo.png" alt="Correo Logo" />
+        <div>
+          <span>Email:</span><br />
+          <a href="mailto:karhub@gmail.com">karhub&#64;gmail.com</a>
+        </div>
+      </div>
+
+      <div class="footer-contact-item">
+        <img src="/assets/img/telefono_logo.png" alt="Teléfono Logo" />
+        <div>
+          <span>Teléfono:</span><br />
+          <a href="tel:+34923456789">+34 923456789</a>
+        </div>
+      </div>
     </div>
   </div>
 
+  <!-- Segunda línea: Lema + Redes + Enlaces + Marcas -->
   <div class="footer-second-line">
     <div class="footer-left">
-      <h3>Haz clic, conéctate y acompáñanos en cada paso.</h3>
+      <h3>Haz clic, conéctate y<br />acompáñanos en cada paso.</h3>
       <div class="footer-social">
-        <a href="#"><img src="/assets/img/facebook_logo.png" alt="Facebook" /></a>
-        <a href="#"><img src="/assets/img/instagram_logo.png" alt="Instagram" /></a>
-        <a href="#"><img src="/assets/img/twitter_logo.png" alt="Twitter" /></a>
-        <a href="#"><img src="/assets/img/youtube_logo.png" alt="YouTube" /></a>
+        <a href="#"><i class="fab fa-facebook-f"></i></a>
+        <a href="#"><i class="fab fa-instagram"></i></a>
+        <a href="#"><i class="fab fa-x-twitter"></i></a>
+        <a href="#"><i class="fab fa-youtube"></i></a>
       </div>
     </div>
 
@@ -47,8 +71,8 @@
     </div>
   </div>
 
+  <!-- Tercera línea: Copyright -->
   <div class="footer-copyright">
     <p>© Copyright KARHUB 2025 | Todos los derechos reservados.</p>
-    <p>hola hola hola</p>
   </div>
 </footer>
