ServicioVehiculo,tipovehiculo,modeloVheiculo,enums

--- a/src/app/shared/components/home-banner-first/home-banner-first.component.html
+++ b/src/app/shared/components/home-banner-first/home-banner-first.component.html
@@ -16,7 +16,7 @@
        </select>
         <select class="form-select" aria-label="Ubicacion">
           <option selected>Ubicación</option>
-          <option value="1">One</option>
+          <option value="1"></option>
           <option value="2">Two</option>
           <option value="3">Three</option>
         </select>
