--- a/src/app/shared/components/registro/registro.component.html
+++ b/src/app/shared/components/registro/registro.component.html
@@ -1,12 +1,12 @@
 <div class="modal-login-bg">
   <div class="modal-login">
     <h2>Registro</h2>
-    <form>
-      <input type="text" placeholder="Nombre" class="login-input" autocomplete="off" />
-      <input type="text" placeholder="Apellido" class="login-input" autocomplete="off" />
-      <input type="email" placeholder="Correo Electronico" class="login-input" autocomplete="off" />
-      <input type="tel" placeholder="Telefono" class="login-input" autocomplete="off" />
-      <input type="password" placeholder="Contraseña" class="login-input" autocomplete="new-password" />
+    <form [formGroup]="usuarioForm" (ngSubmit)="registrarUsuario()">
+      <input type="text" placeholder="Nombre" class="login-input" autocomplete="off" formControlName="nombre" />
+      <input type="text" placeholder="Apellido" class="login-input" autocomplete="off" formControlName="apellidos" />
+      <input type="email" placeholder="Correo Electronico" class="login-input" autocomplete="off" formControlName="correo" />
+      <input type="tel" placeholder="Telefono" class="login-input" autocomplete="off" formControlName="telefono" />
+      <input type="password" placeholder="Contraseña" class="login-input" autocomplete="new-password" formControlName="contrasena" />
       <input type="password" placeholder="Confirmacion contraseña" class="login-input" autocomplete="new-password" />
       <button type="submit" class="login-btn">Registro</button>
     </form>
