--- a/src/app/shared/components/registro/registro.component.html
+++ b/src/app/shared/components/registro/registro.component.html
@@ -6,6 +6,7 @@
       <input type="text" placeholder="Apellido" class="login-input" autocomplete="off" formControlName="apellidos" />
       <input type="email" placeholder="Correo Electronico" class="login-input" autocomplete="off" formControlName="correo" />
       <input type="tel" placeholder="Telefono" class="login-input" autocomplete="off" formControlName="telefono" />
+      <input type="text" placeholder="Dni" class="login-input" autocomplete="off" formControlName="dni" />
       <input type="password" placeholder="Contraseña" class="login-input" autocomplete="new-password" formControlName="contrasena" />
       <input type="password" placeholder="Confirmacion contraseña" class="login-input" autocomplete="new-password" />
       <button type="submit" class="login-btn">Registro</button>
