--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -14,9 +14,9 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item"><a class="nav-link" href="/#">Alquilar</a></li>
-        <li class="nav-item"><a class="nav-link" routerLink="/catalogo">Catálogo</a></li>
-        <li class="nav-item"><a class="nav-link" href="/#">Nosotros</a></li>
-        <li class="nav-item"><a class="nav-link" href="/#">Contacto</a></li>
+        <li class="nav-item"><a class="nav-link" [routerLink]="['/catalogo']">Catálogo</a></li>
+        <li class="nav-item"><a class="nav-link" [routerLink]="['/nosotros']">Nosotros</a></li>
+        <li class="nav-item"><a class="nav-link" [routerLink]="['/catalogo']">Contacto</a></li>
       </ul>
       <ul class="navbar-nav ms-auto">
         <li class="nav-item"><a class="nav-link" href="#" (click)="abrirLogin(); $event.preventDefault()">Iniciar sesión</a></li>
