--- a/src/app/shared/components/login/login.component.html
+++ b/src/app/shared/components/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="modal-login-bg">
   <div class="modal-login">
     <h2>Iniciar Sesion</h2>
-    <form []>
+    <form [formGroup]="loginForm" (ngSubmit)="loginUsuario()">
       <input type="email" placeholder="Email" class="login-input" autocomplete="off" formControlName="correo" />
       <input type="password" placeholder="Contraseña" class="login-input" autocomplete="off" formControlName="contrasena"/>
       <button type="submit" class="login-btn">Iniciar Sesion</button>
