--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -16,7 +16,7 @@
         <li class="nav-item"><a class="nav-link" href="/#">Alquilar</a></li>
         <li class="nav-item"><a class="nav-link" [routerLink]="['/catalogo']">Catálogo</a></li>
         <li class="nav-item"><a class="nav-link" [routerLink]="['/nosotros']">Nosotros</a></li>
-        <li class="nav-item"><a class="nav-link" [routerLink]="['/catalogo']">Contacto</a></li>
+        <li class="nav-item"><a class="nav-link" [routerLink]="['/contacto']">Contacto</a></li>
       </ul>
       <ul class="navbar-nav ms-auto">
         <li class="nav-item"><a class="nav-link" href="#" (click)="abrirLogin(); $event.preventDefault()">Iniciar sesión</a></li>
