--- a/src/app/shared/components/home-banner-first/home-banner-first.component.html
+++ b/src/app/shared/components/home-banner-first/home-banner-first.component.html
@@ -8,22 +8,20 @@
      <div class="folmulario-banner">
       <h2 class="titulo-formulario-banner">Buscar Vehiculos</h2>
       <section class="folmulario-banner-interior">
-        <select class="form-select" aria-label="Tipo de vehiculos">
+        <select class="form-select"   aria-label="Tipo de vehiculos">
           <option selected>Tipo de vehiculos</option>
-          <option value="1">One</option>
-          <option value="2">Two</option>
-          <option value="3">Three</option>
+            @for (tipo of tipoCOCHE; track $index) {
+              <option value="" >{{tipo}}</option>
+          }
        </select>
         <select class="form-select" aria-label="Ubicacion">
           <option selected>Ubicación</option>
-          <option value="1"></option>
-          <option value="2">Two</option>
-          <option value="3">Three</option>
+          @for (ubicacion of ubicaciones; track $index) {
+              <option value="" >{{ubicacion}}</option>
+          }
         </select>
       </section>
       <button class="boton-resultado" >VER RESULTADO</button>
-
-
     </div>
   </div>
 </div>
