--- a/src/app/shared/components/editar-perfil/editar-perfil.component.css
+++ b/src/app/shared/components/editar-perfil/editar-perfil.component.css
@@ -15,9 +15,9 @@
 .modal-editar-perfil {
   background: #5636e6;
   border-radius: 24px;
-  padding: 40px 48px 48px 32px;
+  padding: 40px 32px 48px 32px;
   box-shadow: 0 4px 32px rgba(0,0,0,0.15);
-  width: 350px;
+  width: 450px;
   height: 540px;
   display: flex;
   flex-direction: column;
@@ -36,6 +36,7 @@
 }
 
 .entrada-perfil {
+  box-sizing: border-box;
   width: 100%;
   padding: 12px 16px;
   margin-bottom: 18px;
