--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -12,12 +12,14 @@
     </button>
 
     <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item"><a class="nav-link" href="/#">Alquilar</a></li>
-        <li class="nav-item"><a class="nav-link" [routerLink]="['/catalogo']">Catálogo</a></li>
-        <li class="nav-item"><a class="nav-link" [routerLink]="['/nosotros']">Nosotros</a></li>
-        <li class="nav-item"><a class="nav-link" [routerLink]="['/contacto']">Contacto</a></li>
-      </ul>
+      <div class="center-nav">
+        <ul class="navbar-nav">
+          <li class="nav-item"><a class="nav-link" href="/#">Alquilar</a></li>
+          <li class="nav-item"><a class="nav-link" [routerLink]="['/catalogo']">Catálogo</a></li>
+          <li class="nav-item"><a class="nav-link" [routerLink]="['/nosotros']">Nosotros</a></li>
+          <li class="nav-item"><a class="nav-link" [routerLink]="['/contacto']">Contacto</a></li>
+        </ul>
+      </div>
       <ul class="navbar-nav ms-auto">
         <li class="nav-item"><a class="nav-link" href="#" (click)="abrirLogin(); $event.preventDefault()">Iniciar sesión</a></li>
         <li class="nav-item"><a class="nav-link" href="#" (click)="abrirRegistro(); $event.preventDefault()">Registro</a></li>
