--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,6 +1,7 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
-<nav class="navbar navbar-expand-sm bg-body-tertiary">
+<nav class="navbar navbar-expand-sm bg-body-tertiary" id="mainNavbar">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">
       <img src="assets/img/logo_imagen.png" width="40" height="34" class="d-inline-block align-text-top">
@@ -14,15 +15,45 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <div class="center-nav">
         <ul class="navbar-nav">
-          <li class="nav-item"><a class="nav-link" href="/#">Alquilar</a></li>
-          <li class="nav-item"><a class="nav-link" [routerLink]="['/catalogo']">Catálogo</a></li>
-          <li class="nav-item"><a class="nav-link" [routerLink]="['/nosotros']">Nosotros</a></li>
-          <li class="nav-item"><a class="nav-link" [routerLink]="['/contacto']">Contacto</a></li>
+          <li class="nav-item">
+            <a class="nav-link" href="/#">
+              <div class="nav-icon"><i class="fas fa-car-side"></i></div>
+              <span>Alquilar</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" [routerLink]="['/catalogo']">
+              <div class="nav-icon"><i class="fas fa-th-large"></i></div>
+              <span>Catálogo</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" [routerLink]="['/nosotros']">
+              <div class="nav-icon"><i class="fas fa-users"></i></div>
+              <span>Nosotros</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" [routerLink]="['/contacto']">
+              <div class="nav-icon"><i class="fas fa-envelope"></i></div>
+              <span>Contacto</span>
+            </a>
+          </li>
         </ul>
       </div>
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link" href="#" (click)="abrirLogin(); $event.preventDefault()">Iniciar sesión</a></li>
-        <li class="nav-item"><a class="nav-link" href="#" (click)="abrirRegistro(); $event.preventDefault()">Registro</a></li>
+        <li class="nav-item">
+          <a class="nav-link" href="#" (click)="abrirLogin(); $event.preventDefault()">
+            <i class="fas fa-sign-in-alt me-1"></i>
+            Iniciar sesión
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#" (click)="abrirRegistro(); $event.preventDefault()">
+            <i class="fas fa-user-plus me-1"></i>
+            Registro
+          </a>
+        </li>
       </ul>
     </div>
   </div>
