--- a/src/app/shared/components/dato-contacto/dato-contacto.component.html
+++ b/src/app/shared/components/dato-contacto/dato-contacto.component.html
@@ -1,8 +1,10 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
 <div class="contacto-container container">
     <div class="row text-center text-md-start py-4">
       <div class="col-12 col-md-3 d-flex align-items-center mb-3 mb-md-0">
-        <img src="Ubicacion.png" alt="Ubicación" class="icon me-2">
+        
+        <img src="assets/img/ubicacion.png" alt="Ubicación" class="icon me-2">
         <div>
           <div class="label">Dirección</div>
           <div class="info"><b>Oxford Ave. Cary, NC 27511</b></div>
@@ -10,7 +12,7 @@
       </div>
 
       <div class="col-12 col-md-3 d-flex align-items-center mb-3 mb-md-0">
-        <img src="Email.png" alt="Correo" class="icon me-2">
+        <img src="assets/img/Email.png" alt="Correo" class="icon me-2">
         <div>
           <div class="label">Email</div>
           <div class="info"><b>nwiger&#64;yahoo.com</b></div>
@@ -18,7 +20,7 @@
       </div>
 
       <div class="col-12 col-md-3 d-flex align-items-center mb-3 mb-md-0">
-        <img src="Telefono.png" alt="Teléfono" class="icon me-2">
+        <img src="assets/img/telefono.png" alt="Teléfono" class="icon me-2">
         <div>
           <div class="label">Teléfono</div>
           <div class="info"><b>+537 547-6401</b></div>
@@ -26,7 +28,7 @@
       </div>
 
       <div class="col-12 col-md-3 d-flex align-items-center mb-3 mb-md-0">
-        <img src="Horario.png" alt="Horario" class="icon me-2">
+        <img src="assets/img/Horario.png" alt="Horario" class="icon me-2">
         <div>
           <div class="label">Horario</div>
           <div class="info"><b>Sab-Lun: 10am - 10pm</b></div>
