--- a/src/app/shared/components/ultima-publicacion/ultima-publicacion.component.html
+++ b/src/app/shared/components/ultima-publicacion/ultima-publicacion.component.html
@@ -5,7 +5,7 @@
     <!-- Publicación 1 -->
     <div class="col-12 col-md-4">
       <div class="blog-card">
-        <img src="img1.jpg" alt="Coche adecuado" class="blog-img">
+        <img src="assets/img/img1.jpg" alt="Coche adecuado" class="blog-img">
         <h5 class="blog-heading"><b>Cómo Elegir El Coche Adecuado</b></h5>
         <p class="blog-meta">Noticias / 12 abril 2024</p>
       </div>
@@ -13,7 +13,7 @@
     <!-- Publicación 2 -->
     <div class="col-12 col-md-4">
       <div class="blog-card">
-        <img src="img2.jpg" alt="Plan adecuado" class="blog-img">
+        <img src="assets/img/img2.jpg" alt="Plan adecuado" class="blog-img">
         <h5 class="blog-heading"><b>¿Qué plan es el adecuado para mí?</b></h5>
         <p class="blog-meta">Noticias / 12 abril 2024</p>
       </div>
@@ -21,7 +21,7 @@
     <!-- Publicación 3 -->
     <div class="col-12 col-md-4">
       <div class="blog-card">
-        <img src="img3.jpg" alt="Velocidad y control" class="blog-img">
+        <img src="assets/img/img3.jpg" alt="Velocidad y control" class="blog-img">
         <h5 class="blog-heading"><b>Disfruta de la velocidad, la elección y el control total</b></h5>
         <p class="blog-meta">Noticias / 12 abril 2024</p>
       </div>
