--- a/src/app/vistas/especificaciones/especificaciones.component.html
+++ b/src/app/vistas/especificaciones/especificaciones.component.html
@@ -1,4 +1,5 @@
 <app-navbar></app-navbar>
 <app-tipo-vehiculo-banner-first></app-tipo-vehiculo-banner-first>
 <app-tipo-vehiculo-resennas></app-tipo-vehiculo-resennas>
+<app-preview-catalogo></app-preview-catalogo>
 <app-footer></app-footer>
