cambio de imagenes
modo transparente

--- a/src/app/vistas/contacto/contacto.component.html
+++ b/src/app/vistas/contacto/contacto.component.html
@@ -3,4 +3,5 @@
 <app-contacto-banner></app-contacto-banner>
 <app-dato-contacto></app-dato-contacto>
 <app-ultima-publicacion></app-ultima-publicacion>
+<app-marcas-block></app-marcas-block>
 <app-footer></app-footer>
